# math-ml

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  demo_document_processing.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: Makefile  README.md  conf.py  examples.md  index.md  installation.md  quickstart.md  requirements.txt
docs/_static/: custom.css
docs/api/: core.md  formats.md  index.md
examples/: advanced_domains_demo.py  document_processing_examples.py  performance_benchmark.py
mathml_parser/: ENHANCEMENT_SUMMARY.md  __init__.py  cli.py
mathml_parser/core/: __init__.py  document_exporters.py  document_processor.py  exceptions.py  grammar.py  latex_parser.py  multi_format.py  optimizer.py  parser.py  text_processor.py  transformer.py  validator.py
mathml_parser/domains/: __init__.py  complex_numbers.py  differential_equations.py  probability.py  set_theory.py
mathml_parser/examples/: advanced_features.py  basic_usage.py  extended_features.py
mathml_parser/performance/: __init__.py
mathml_parser/tests/: test_comprehensive.py  test_enhanced.py
tests/: test_document_processing.py
web_interface/: README.md  app.py  config.py  deploy.py  requirements.txt
