[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathml-parser"
version = "2.0.0"
description = "A comprehensive mathematical expression to MathML parser with advanced features"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MathML Parser Team", email = "support@mathml-parser.com"}
]
maintainers = [
    {name = "MathML Parser Team", email = "support@mathml-parser.com"}
]
keywords = [
    "mathematics", "mathml", "parser", "expressions", "algebra",
    "calculus", "equations", "xml", "mathematical notation",
    "greek letters", "matrices", "functions", "trigonometry"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education", 
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
requires-python = ">=3.8"
dependencies = [
    "lark>=1.1.0,<2.0.0",
    "typing-extensions>=4.0.0; python_version<'3.10'"
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-type-checking>=2.3.0",
    "pre-commit>=3.0.0"
]

# Documentation dependencies
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.19.0",
    "myst-parser>=1.0.0",
    "nbsphinx>=0.8.0",
    "jupyter>=1.0.0"
]

# Performance and optimization dependencies
performance = [
    "cython>=0.29.0",
    "numpy>=1.20.0",
    "numba>=0.56.0",
    "redis>=4.0.0"
]

# Web API dependencies
web = [
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "websockets>=11.0.0",
    "aiofiles>=23.0.0",
    "jinja2>=3.1.0"
]

# Educational and visualization dependencies
education = [
    "matplotlib>=3.5.0",
    "plotly>=5.10.0",
    "sympy>=1.11.0",
    "jupyter-widgets>=8.0.0",
    "ipywidgets>=8.0.0"
]

# Document processing dependencies  
documents = [
    "reportlab>=3.6.0",
    "weasyprint>=56.0",
    "markdown>=3.4.0",
    "jinja2>=3.1.0"
]

# OCR and advanced input dependencies
advanced-input = [
    "pillow>=9.0.0",
    "opencv-python>=4.6.0",
    "pytesseract>=0.3.10",
    "speechrecognition>=3.9.0"
]

# Database and persistence dependencies
database = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.9.0",
    "sqlite3"  # Built-in, but listed for clarity
]

# Full installation with all optional dependencies
all = [
    "mathml-parser[dev,docs,performance,web,education,documents,advanced-input,database]"
]

[project.urls]
Homepage = "https://github.com/mathml-parser/mathml-parser"
Documentation = "https://mathml-parser.readthedocs.io/"
Repository = "https://github.com/mathml-parser/mathml-parser.git"
"Bug Reports" = "https://github.com/mathml-parser/mathml-parser/issues"
Changelog = "https://github.com/mathml-parser/mathml-parser/blob/main/CHANGELOG.md"
Discussions = "https://github.com/mathml-parser/mathml-parser/discussions"

[project.scripts]
mathml-parse = "mathml_parser.cli:main"

[project.gui-scripts]
# Future GUI application entry point
# mathml-gui = "mathml_parser.gui:main"

[tool.setuptools]
packages = ["mathml_parser"]
include-package-data = true

[tool.setuptools.package-data]
mathml_parser = [
    "py.typed",
    "config/*.yaml",
    "config/*.json", 
    "locale/*/LC_MESSAGES/*.po",
    "locale/*/LC_MESSAGES/*.mo",
    "templates/*.html",
    "templates/*.md",
    "static/css/*.css",
    "static/js/*.js"
]

[tool.setuptools.exclude-package-data]
"*" = ["tests*", "*.pyc", "*.pyo", "__pycache__"]

# Black code formatting configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
# Exclude auto-generated files
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs/_build
)/
'''

# isort import sorting configuration  
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
known_first_party = ["mathml_parser"]
known_third_party = ["lark", "pytest", "numpy", "matplotlib"]

# MyPy type checking configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true

# Per-module type checking options
[[tool.mypy.overrides]]
module = [
    "lark.*",
    "matplotlib.*", 
    "plotly.*",
    "reportlab.*",
    "weasyprint.*"
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config", 
    "--verbose",
    "--tb=short",
    "--cov=mathml_parser",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=90"
]
testpaths = [
    "tests",
    "mathml_parser/tests"
]
python_files = [
    "test_*.py",
    "*_test.py"
]
python_classes = [
    "Test*",
    "*Tests"
]
python_functions = [
    "test_*"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks",
    "web: marks tests that require web dependencies",
    "education: marks tests for educational features",
    "documents: marks tests for document processing",
    "advanced_input: marks tests for advanced input methods",
    "database: marks tests that require database"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]

# Coverage configuration
[tool.coverage.run]
source = ["mathml_parser"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*"
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError", 
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
    "@overload"
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# Flake8 linting configuration (in setup.cfg since flake8 doesn't support pyproject.toml yet)
# See setup.cfg for flake8 configuration

# Bandit security linting configuration
[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection_process

# Ruff linting configuration (alternative to flake8)
[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".bzr",
    ".direnv", 
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv"
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["B011"]      # Allow assert False in tests

[tool.ruff.isort]
known-first-party = ["mathml_parser"]